# ollama-benchmark

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg
ollama_benchmark/: __init__.py  chat.py  client.py  data_manager.py  defaults.py  errors.py  loggers.py  main.py  print_questions.py  pull_models.py  questions.py  settings.py  tester.py  unload_models.py  utils.py
ollama_benchmark/embedding/: main.py  samples.py  tester.py
ollama_benchmark/hack/: main.py  tester.py
ollama_benchmark/hack/hacks/: antigpt.py  base.py  confused_deputy.py  context_leveraging.py  emulated_code.py  emulated_code_escape.py  hangman.py  math_non_trivial.py  math_non_trivial_v2.py  math_trivial.py  naive_external.py  naive_last_word.py  reasoning.py  response_conditioning.py
ollama_benchmark/judge/: main.py  prompts.py  tester.py  utils.py
ollama_benchmark/load/: main.py  tester.py
ollama_benchmark/speed/: main.py  run_test.py  tester.py
