[metadata]
name = ollama-benchmark
version = attr: ollama_benchmark.__version__
author = Anthony Monthe
author_email = anthony@cloud-mercato.com
url = https://github.com/cloudmercato/ollama-benchmark
project_urls = 
summary = Handy tool for evaluate ollama model performance
description_file = file: README.rst
long_description = file: README.rst
description_content_type = text/x-rst; charset=UTF-8
license = MIT

requires_dist =
    setuptools

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Environment :: MacOS X
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Networking
    Topic :: System :: Benchmark

keywords = benchmark, machine learning, deep learning


[options]
zip_safe = False
include_package_data = True
package_dir=
packages=find:
    
install_requires =

test_suite = ollama_benchmark.tests
tests_require =

[options.extras_require]


[options.entry_points]
console_scripts =
    ollama-benchmark = ollama_benchmark.main:main


[coverage:run]
omit = ollama_benchmark/tests/*
branch = True
source = ollama_benchmark

[coverage:report]
show_missing = true
exclude_lines =
    noqa
    NotImplemented
